# project_master

./: .gitignore  CLAUDE.md  prd.md  prd_v02.md
.claude/sessions/: 2025-12-16-devflow-auth.md
backend/: pyproject.toml  requirements.txt
backend/src/: __init__.py  main.py
backend/src/ai_agent/: __init__.py  analyzer.py  coder.py  planner.py  pr_manager.py
backend/src/approval/: __init__.py  diff.py  git_ops.py  hitl.py  pr_manager.py  request.py  rollback.py  workflow.py
backend/src/auth/: __init__.py  jwt.py  oauth.py  session.py
backend/src/cli/: __init__.py  checker.py  executor.py  parser.py
backend/src/diagram/: __init__.py  builder.py  parser.py  styling.py
backend/src/issue/: __init__.py  github_client.py  service.py  sync.py
backend/src/realtime/: __init__.py  progress.py  sse.py  sse_server.py
backend/src/repository/: __init__.py  github_client.py  service.py
docs/checklists/: PRD-0005.md  VERIFICATION.md
docs/mockups/: causality-diagram.html  devflow-architecture.html
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/docs/: SUPABASE_SETUP.md
frontend/scripts/: setup-supabase.ps1
frontend/supabase/: config.toml
tasks/: 0007-tasks-diagram-redesign.md
tasks/prds/: 0001-prd-gitcommand-center.md  0002-prd-gitcommand-center-v2.md  0003-ui-design-workflow.md  0004-tdd-test-plan.md  0005-prd-devflow-ai-collaboration.md  0006-prd-ai-auto-mode.md  0007-prd-diagram-redesign.md  0008-prd-behavior-visualization.md  (+1 more)
tests/: __init__.py
(+129 files in other folders)
